# touhou-on-nixos

./: .gitignore  README.md  flake.nix  setup_dxvk.sh
thcrap2nix/: Cargo.toml  build.rs  default.nix  example.json  wrapper.h
thcrap2nix/.cargo/: config.toml
thcrap2nix/src/: bindings.rs  main.rs  thcrap.rs  thcrapdef.rs  utils.rs
thcrap_mirror/: index.ts  package-lock.json  package.json  tsconfig.json
thcrap_mirror/lib/: thcrap.ts
