[package]
name = "thcrap2nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
jansson-sys = "0.1.0"
libc = "0.2.148"
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "errhandlingapi"]}
[build-dependencies]
bindgen = "0.68.1"
