[package]
name = "thcrap2nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
jansson-sys = "0.1.0"
libc = "0.2.148"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "errhandlingapi"]}
[build-dependencies]
bindgen = "0.68.1"
